# meow

./: .gitignore  README.md  meow.spec  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml
meow/: __init__.py  __main__.py
meow/a/: __init__.py  aaa.py
scripts/: l.sh  m.sh  w.ps1
