[tool.poetry]
name = "meow"
version = "0.0.2"
description = ""
authors = ["Samara"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.12.0"

[tool.poetry.scripts]
meow = "meow:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
